added a debug line